captain.helloworld.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: captain
  labels:
    app: helloworld
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
