kube.gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - one.kube.busykoala.ch
    - two.kube.busykoala.ch
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - one.kube.busykoala.ch
    - two.kube.busykoala.ch
    tls:
      mode: SIMPLE
      credentialName: istio-certs
